MDEV-22488: handle_alter_part_error fix warnings

When push_warning_printf, the %s args need to match the
number of strings.

Fixes: 8399af81be0a87d1c0ea09164c05a9ac8eb715e2